Add basic notebook and supporting code/makefiles

--- a/titanic/Makefile
+++ b/titanic/Makefile
@@ -1,5 +1,10 @@
 PYTHON ?= python
 
+.PHONY: setup
+setup:
+	$(PYTHON) -m pip install --upgrade pip setuptools wheel
+	$(PYTHON) -m pip install -e .
+
 .PHONY: requirements
 requirements:
 	$(PYTHON) -m pip install -r requirements.txt
@@ -7,3 +12,7 @@ requirements:
 .PHONY: docs
 docs:
 	$(MAKE) -C docs html
+
+.PHONY: jupyter
+jupyter:
+	$(PYTHON) -m jupyter notebook --notebook-dir=notebooks
