--- a/titanic/requirements.txt
+++ b/titanic/requirements.txt
@@ -1,7 +1,72 @@
-click
-Sphinx
-coverage
-flake8
-pandas
-numpy
-jupyter
+alabaster==0.7.12
+attrs==19.3.0
+Babel==2.8.0
+backcall==0.1.0
+bleach==3.1.5
+certifi==2020.4.5.1
+chardet==3.0.4
+click==7.1.2
+coverage==5.1
+decorator==4.4.2
+defusedxml==0.6.0
+docutils==0.16
+entrypoints==0.3
+flake8==3.8.1
+idna==2.9
+imagesize==1.2.0
+ipykernel==5.2.1
+ipython==7.14.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+jedi==0.17.0
+Jinja2==2.11.2
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.3
+jupyter-console==6.1.0
+jupyter-core==4.6.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
+mistune==0.8.4
+nbconvert==5.6.1
+nbformat==5.0.6
+notebook==6.0.3
+numpy==1.18.4
+packaging==20.3
+pandas==1.0.3
+pandocfilters==1.4.2
+parso==0.7.0
+pexpect==4.8.0
+pickleshare==0.7.5
+prometheus-client==0.7.1
+prompt-toolkit==3.0.5
+ptyprocess==0.6.0
+pycodestyle==2.6.0
+pyflakes==2.2.0
+Pygments==2.6.1
+pyparsing==2.4.7
+pyrsistent==0.16.0
+python-dateutil==2.8.1
+pytz==2020.1
+pyzmq==19.0.1
+qtconsole==4.7.4
+QtPy==1.9.0
+requests==2.23.0
+Send2Trash==1.5.0
+six==1.14.0
+snowballstemmer==2.0.0
+Sphinx==3.0.3
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
+terminado==0.8.3
+testpath==0.4.4
+tornado==6.0.4
+traitlets==4.3.3
+urllib3==1.25.9
+wcwidth==0.1.9
+webencodings==0.5.1
+widgetsnbextension==3.5.1
